# sipdump

./: .gitignore  CMakeLists.txt  README.md  cmake_uninstall.cmake.in
config/: mrcpdump.xml  sipdump.xml
installer/: install.sh
installer/docker/: Dockerfile-mrcp  Dockerfile-sip  build.sh  run.sh
installer/docker/entrypoint/: entrypoint-mrcp.sh  entrypoint-sip.sh
installer/ldconfig/: sipdump.conf
plugins/example_mrcp/: CMakeLists.txt
plugins/example_mrcp/src/: example_mrcp.c
plugins/example_sip/: CMakeLists.txt
plugins/example_sip/src/: example_sip.c
src/client/src/: sipdump_client.c
src/core/include/: sipdump_config.h  sipdump_fragment.h  sipdump_hook.h  sipdump_log.h  sipdump_module.h  sipdump_mrcp.h  sipdump_network.h  sipdump_opt.h  sipdump_pcap.h  sipdump_plugins.h  sipdump_sdp.h  sipdump_session.h  sipdump_sip.h  sipdump_sip_hdr.h  sipdump_text.h  sipdump_util.h
src/core/src/: sipdump_fragment.c  sipdump_hook.c  sipdump_log.c  sipdump_mrcp.c  sipdump_network.c  sipdump_opt.c  sipdump_pcap.c  sipdump_plugins.c  sipdump_sdp.c  sipdump_session.c  sipdump_sip.c  sipdump_sip_hdr.c  sipdump_text.c  sipdump_util.c
src/tests/include/: test_sipdump_sip_hdr.h  test_sipdump_util.h
src/tests/src/: test.c  test_sipdump_sip_hdr.c  test_sipdump_util.c
